Update .gitignore to allow additional folders

--- a/.gitignore
+++ b/.gitignore
@@ -15,5 +15,13 @@
 !pages/pengembalian/
 !pages/pengembalian/**
 
+# Izinkan folder layout
+!layout/
+!layout/**
+
+# Izinkan folder anggota
+!pages/anggota/
+!pages/anggota/**
+
 # Izinkan gitignore itu sendiri
 !.gitignore
